2004-04-22  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro): One more use of load_delay_nop.

2004-04-22  Atsushi Nemoto  <anemo@mba.ocn.ne.jp>

	* config/tc-mips.c (load_delay_nop): New function.
	(load_address, macro): Use load_delay_nop() to build a nop
	which can be omitted with gpr_interlocks.

2004-04-22  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (hilo_interlocks, gpr_interlocks,
	cop_interlocks): Remove superfluous CPU entries.

2004-04-22  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (mav_parse_offset): Value must be multiple of 4.

2004-04-22  Peter Barada <peter@the-baradas.com>

	* NEWS: Added support for EMAC instructions and MAC/EMAC
	Motorola syntax.
	* config/m68k-parse.h: Add ACC[123], ACCEXT{01,23}, MAC/EMAC
	scale factor tokens, trailing_ampersand to mark mask addressing
	for MAC/EMAC instructions.
	* config/m68k-parse.y: Add options_ampersand clause, '<<',
	'>>'.
	(yylex): Handle '>', '<', and '&' following '+'.
	* config/tc-m68k.c: Set mcfmac/mcfemac on appropriate ColdFire
	architectures in archs[].  
	(m68k-ip): Add '4', 'e', 'g', 'i', cases to handle mask addressing
	for MAC/EMAC instructions, ACC[0123], ACCEXT{01,23}, and '<<'/'>>'
	respectively.
	(m68k_ip): Handle trailing '&' on MAC/EMAC insns.
	(install_operand): Fix 'n' case, Add 'F', 'f', 'G', 'H', 'I', ']'
	cases.
	Add EMAC operands to init_table[].

2004-04-22  Bruno De Bus <bdebus@elis.ugent.be>

	* config/tc-arm.h (enum mstate): Move here, add MAP_UNDEFINED
	state.
	(TC_SEGMENT_INFO_TYPE): Define to enum mstate.
	* config/tc-arm.c (enum mstate): Delete from here.
	(mapping_state): Remove the static mapstate variable and instead
	store the state in the segment.  This allows a per-section mapping
	state.  Handle and ignore MAP_UNDEFINED states.
	(arm_elf_change_section): Get the current mapping state from the
	new section.
	(s_ltorg): Set the mapping state to MAP_DATA.